Update pom.xml, java version, tests dependencies